dep/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nms-controller
spec:
  selector:
    matchLabels:
      run: nms-controller
  replicas: 1
  template:
    metadata:
      labels:
        run: nms-controller
    spec:
      containers:
      - name: nms-controller
        image: iiicondor/controller:1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 128M
          limits:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 256M
        ports:
        - containerPort: 8080
          name: http
